# opensrc-2022

./: README.md  copy.h  count2.bash  lshead.bash  main.c  menu.bash  perm2.bash  power.bash  rhead.bash
CMAKE/: CMakeLists.txt  main.c  reverse.c  reverse.h
Makefile/: Makefile  hello.c  myprog.c
makestudy/: README.md  copy.c
